--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: #1e1e30;
   background: linear-gradient(36deg, #1e1e30 58%, #364669 100%);
   margin: 0;
@@ -141,15 +141,16 @@ h1 {
 
 .movie-details-top-stats .average-rating {
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 700;
   height: 35px;
   width: 35px;
   line-height: 35px;
   text-align: center;
   border-radius: 50%;
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   color: #ffffff;
   padding: 12px;
+  border: 1px solid #ccc;
   background: #ff8401;
   background: linear-gradient(9deg, #ff8401 0%, #ffa600 100%);
   -webkit-box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
