--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 $black: #000000;
 $white: #ffffff;
@@ -11,7 +12,7 @@ $box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
 
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background: rgb(30, 30, 48);
     background: linear-gradient(36deg, rgba(30, 30, 48, 1) 58%, rgba(54, 70, 105, 1) 100%);
     $color: $white;
@@ -145,15 +146,16 @@ h1 {
 
         .average-rating {
             font-size: 22px;
-            font-weight: 600;
+            font-weight: 700;
             height: 35px;
             width: 35px;
             line-height: 35px;
             text-align: center;
             border-radius: 50%;
-            text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
             color: $white;
             padding: 12px;
+            border: 1px solid #ccc;
             background: rgb(255, 132, 1);
             background: linear-gradient(9deg, rgba(255, 132, 1, 1) 0%, rgba(255, 166, 0, 1) 100%);
             box-shadow: $box-shadow;
