--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -42,12 +42,31 @@ h1 {
     li {
         display: inline-block;
         margin-right: 60px;
+
+        a {
+            color: $white;
+            text-decoration: none;
+            transition: .3s ease;
+
+            &:hover {
+                color: $very-light-blue;
+            }
+        }
     }
 }
 
 .header {
     padding: 20px 0;
     background-color: $black;
+
+    &-link {
+        text-decoration: none;
+        transition: .3s ease;
+
+        &:hover {
+            color: $very-light-blue !important;
+        }
+    }
 
     ul {
         list-style-type: none;
@@ -188,4 +207,10 @@ h1 {
     p {
         margin-top: 0;
     }
+}
+
+footer {
+    padding: 40px 0;
+    background-color: $light-blue;
+    color: $white;
 }
