--- a/src/css/App.css
+++ b/src/css/App.css
@@ -216,4 +216,89 @@ footer {
   background-color: #364669;
   color: #ffffff;
 }
+
+input {
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #ffffff;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome, other WebKit */
+  /* Firefox, other Gecko */
+  box-sizing: border-box;
+}
+
+.middle > * {
+  vertical-align: middle;
+}
+
+.login {
+  min-height: 100vh;
+}
+
+.login .illustration {
+  vertical-align: middle;
+  display: table-cell;
+  text-align: center;
+  padding: 4% 0;
+  background-repeat: no-repeat;
+  background-size: 200%;
+}
+
+.login-form {
+  background: #1e1e30;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #1e1e30), color-stop(150%, #2e4981));
+  background: linear-gradient(180deg, #1e1e30 70%, #2e4981 150%);
+  color: #ffffff;
+  padding: 40px 80px !important;
+}
+
+.login-form h2 {
+  font-size: 46px;
+}
+
+.login-form h2:after {
+  content: '';
+  display: block;
+  margin-top: 10px;
+  width: 10%;
+  height: 5px;
+  background-color: #0ceafa;
+}
+
+.login-form label {
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+.login-form input {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.login-form button {
+  background: black;
+  background: linear-gradient(9deg, black 0%, rgba(0, 0, 0, 0.5) 100%);
+  color: #0ceafa;
+  width: 100%;
+  border: 3px solid #000000;
+  padding: 15px;
+  font-size: 18px;
+  font-weight: 600;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.login-form button:hover {
+  cursor: pointer;
+  border: 3px solid #0ceafa;
+  background-color: lighten;
+}
+
+.login-form .link {
+  color: #0ceafa;
+  text-decoration: none;
+}
 /*# sourceMappingURL=App.css.map */
