--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -27,8 +27,21 @@ body {
     padding: 0;
 }
 
+#about-section {
+    background: url('../images/deadpool.png');
+    background-color: $dark-blue;
+    background-size: 70%;
+    background-position: 60% 5%;
+    background-repeat: no-repeat;
+}
+
 h1 {
     color: #000000;
+}
+
+.paragraph {
+    line-height: 1.75em;
+    font-size: 18px;
 }
 
 .container {
@@ -217,8 +230,13 @@ h1 {
 
 footer {
     padding: 40px 0;
-    background-color: $light-blue;
     color: $white;
+    position: relative;
+    background: url('../images/bg-wave-bottom.svg');
+    background-color: $dark-blue;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 input {
