--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,15 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 .section {
   background-color: #1e1e30;
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif !important;
 }
 
 #about-section {
@@ -20,10 +15,6 @@ body {
   background-repeat: no-repeat;
 }
 
-h1 {
-  color: #000000;
-}
-
 .paragraph {
   line-height: 1.75em;
   font-size: 18px;
@@ -32,10 +23,18 @@ h1 {
 .container {
   margin: 0 auto;
   width: 80%;
+  font-family: "Poppins", sans-serif !important;
 }
 
-.container h1 {
+.container .heading-page {
+  font-size: 34px;
+  font-weight: 600;
+  margin: 20px 0;
   color: #ffffff !important;
+}
+
+.MuiTab-textColorInherit:focus {
+  outline: none;
 }
 
 .horizontal-ul {
@@ -63,6 +62,7 @@ h1 {
 .header {
   padding: 20px 0;
   background-color: #000000;
+  font-family: "Poppins", sans-serif !important;
 }
 
 .header-link {
@@ -73,6 +73,7 @@ h1 {
 
 .header-link:hover {
   color: #2eafbb !important;
+  text-decoration: none;
 }
 
 .header ul {
@@ -90,6 +91,11 @@ h1 {
 .header a,
 .header h1 {
   color: #ffffff !important;
+}
+
+.header h1 {
+  font-size: 34px;
+  font-weight: 700;
 }
 
 .movies-content {
@@ -172,9 +178,10 @@ h1 {
 }
 
 .movie-details-top-stats {
-  padding: 20px 0;
+  margin: 20px 0;
   height: 60px;
   line-height: 60px;
+  display: inline-block;
 }
 
 .movie-details-top-stats .average-rating {
@@ -225,6 +232,7 @@ h1 {
 
 footer {
   padding: 40px 0;
+  font-family: "Poppins", sans-serif !important;
   color: #ffffff;
   position: relative;
   background: url("../images/bg-wave-bottom.svg");
@@ -234,15 +242,8 @@ footer {
   background-repeat: no-repeat;
 }
 
-input {
-  padding: 10px;
-  font-size: 18px;
-  border: 1px solid #ffffff;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  /* Safari/Chrome, other WebKit */
-  /* Firefox, other Gecko */
-  box-sizing: border-box;
+footer h2 {
+  margin-bottom: 20px;
 }
 
 .middle > * {
@@ -267,25 +268,38 @@ input {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #1e1e30), color-stop(150%, #2e4981));
   background: linear-gradient(180deg, #1e1e30 70%, #2e4981 150%);
   color: #ffffff;
-  padding: 40px 80px !important;
+  padding: 60px 80px !important;
+}
+
+.login-form input {
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #ffffff;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome, other WebKit */
+  /* Firefox, other Gecko */
+  box-sizing: border-box;
 }
 
 .login-form h2 {
   font-size: 46px;
+  font-weight: 600;
+  margin-bottom: 40px;
 }
 
 .login-form h2:after {
   content: '';
   display: block;
-  margin-top: 10px;
+  margin-top: 15px;
   width: 10%;
-  height: 5px;
+  height: 6px;
   background-color: #0ceafa;
 }
 
 .login-form label {
   font-size: 24px;
-  margin: 20px 0;
+  margin: 0;
 }
 
 .login-form input {
@@ -305,7 +319,7 @@ input {
   -webkit-transition: .3s ease;
   transition: .3s ease;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin: 20px 0 40px 0;
 }
 
 .login-form button:hover {
