--- a/src/css/App.css
+++ b/src/css/App.css
@@ -180,6 +180,7 @@
 .movie-details-top-stats {
   margin: 20px 0;
   height: 60px;
+  width: 100%;
   line-height: 60px;
   display: inline-block;
 }
@@ -370,7 +371,7 @@ footer h2 {
 
 .table-my-list td,
 .table-my-list th {
-  border: 1px solid #293042;
+  border-bottom: 1px solid #293042;
   text-align: left;
   padding: 8px;
 }
