--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -208,6 +208,7 @@ $box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
     &-top-stats {
         margin: 20px 0;
         height: 60px;
+        width: 100%;
         line-height: 60px;
         display: inline-block;
 
@@ -388,7 +389,7 @@ footer {
 
     td,
     th {
-        border: 1px solid #293042;
+        border-bottom: 1px solid #293042;
         text-align: left;
         padding: 8px;
     }
