--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -336,8 +336,13 @@ footer {
         }
 
         label {
+            width: 100%;
             font-size: 24px;
             margin: 0;
+
+            .eye-icon-pw {
+                float: right !important;
+            }
         }
 
         input {
