carousel on popular movies tab

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+.background-img-cover {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .section {
   background-color: #1e1e30;
   min-height: 100vh;
@@ -392,5 +397,19 @@ footer h2 {
 
 .table-my-list tr {
   background-color: #2e3447;
+}
+
+.carousel-title {
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.carousel-description {
+  font-size: 20px;
+  line-height: 1.7em;
+}
+
+.MuiBox-root {
+  padding: 0 !important;
 }
 /*# sourceMappingURL=App.css.map */
