--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -410,16 +410,16 @@ footer {
     }
 
     tr:nth-child(even) {
-        background-color: #353d4f;
+        background-color: #2e3447;
     }
 
     tr {
-        background-color: #2e3447;
+        background-color: #353d4f;
     }
 }
 
 .table-legend-about {
-    width: 30% !important;
+    width: 40%;
 }
 
 .carousel {
