some styling additions and changes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -424,7 +424,7 @@ footer h2 {
 .landing-page {
   height: 100vh;
   max-height: 100vh;
-  background: url("https://image.freepik.com/free-vector/cinema-movie-concept_1302-12571.jpg");
+  background: url("https://content.web-repository.com/s/48556210809167881/uploads/Backgrounds/gradient_warm_gif_background-0967584.gif");
   background-size: cover;
   color: #ffffff;
 }
@@ -461,7 +461,7 @@ footer h2 {
 }
 
 .landing-page .wrapper .img-col img {
-  margin-top: -100px;
+  margin-top: -150px;
   margin-left: -100px;
   margin-right: -30px;
   -webkit-filter: drop-shadow(5px 5px 15px #d486ba9a);
