--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -452,7 +452,7 @@ footer {
 .landing-page {
     height: 100vh;
     max-height: 100vh;
-    background: url('https://image.freepik.com/free-vector/cinema-movie-concept_1302-12571.jpg');
+    background: url('https://content.web-repository.com/s/48556210809167881/uploads/Backgrounds/gradient_warm_gif_background-0967584.gif');
     background-size: cover;
     color: $white;
 
@@ -486,7 +486,7 @@ footer {
             }
 
             img {
-                margin-top: -100px;
+                margin-top: -150px;
                 margin-left: -100px;
                 margin-right: -30px;
                 -webkit-filter: drop-shadow(5px 5px 15px #d486ba9a);
