--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -15,19 +15,34 @@ $neon-pink: #fe019a;
 
 $box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
 
-@mixin hoverEffect($color, $lighten: true) {
+@mixin hoverEffect($color, $lighten: true, $background: true) {
     transition: .3s ease;
-    background-color: $color;
+
+    @if ($background) {
+        background-color: $color;
+    }
 
     &:hover {
         cursor: pointer;
 
-        @if ($lighten) {
-            background-color: lighten($color, 10%);
+        @if ($background) {
+            @if ($lighten) {
+                background-color: lighten($color, 10%);
+            }
+
+            @else {
+                background-color: darken($color, 10%);
+            }
         }
 
         @else {
-            background-color: darken($color, 10%);
+            @if ($lighten) {
+                color: lighten($color, 10%);
+            }
+
+            @else {
+                color: darken($color, 10%);
+            }
         }
     }
 }
@@ -398,7 +413,7 @@ footer {
     padding: 10px 20px;
     font-size: 16px;
     font-weight: 600;
-    @include hoverEffect(green, true);
+    @include hoverEffect(green, true, true);
     color: $white;
 }
 
@@ -523,4 +538,9 @@ footer {
             }
         }
     }
+}
+
+.delete-trash-icon {
+    color: rgb(245, 84, 72);
+    @include hoverEffect(rgb(245, 84, 72), true, false)
 }
