deleting movies working with live update table data

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -525,6 +525,7 @@ footer {
             text-decoration: none;
 
             &:hover {
+                border-radius: 40px;
                 background-color: darken(#d486ba, 10%);
             }
         }
