--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,514 +1,518 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 .background-img-cover {
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .section {
-    background-color: #1e1e30;
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif !important;
+  background-color: #1e1e30;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif !important;
 }
 
 #about-section {
-    background: url("../images/deadpool.png");
-    background-color: #1e1e30;
-    background-size: 70%;
-    background-position: 60% 5%;
-    background-repeat: no-repeat;
+  background: url("../images/deadpool.png");
+  background-color: #1e1e30;
+  background-size: 70%;
+  background-position: 60% 5%;
+  background-repeat: no-repeat;
 }
 
 .paragraph {
-    line-height: 1.75em;
-    font-size: 18px;
+  line-height: 1.75em;
+  font-size: 18px;
 }
 
 .container {
-    margin: 0 auto;
-    width: 80%;
-    font-family: "Poppins", sans-serif !important;
+  margin: 0 auto;
+  width: 80%;
+  font-family: "Poppins", sans-serif !important;
 }
 
 .container .heading-page {
-    font-size: 34px;
-    font-weight: 600;
-    margin: 20px 0;
-    color: #ffffff !important;
+  font-size: 34px;
+  font-weight: 600;
+  margin: 20px 0;
+  color: #ffffff !important;
 }
 
 .MuiTab-textColorInherit:focus {
-    outline: none;
+  outline: none;
 }
 
 body {
-    overflow-x: hidden !important;
+  overflow-x: hidden !important;
 }
 
 .horizontal-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .horizontal-ul li {
-    display: inline-block;
-    margin-right: 60px;
+  display: inline-block;
+  margin-right: 60px;
 }
 
 .horizontal-ul li a {
-    color: #ffffff;
-    text-decoration: none;
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
 }
 
 .horizontal-ul li a:hover {
-    color: #2eafbb;
+  color: #2eafbb;
 }
 
 .header {
-    padding: 20px 0;
-    background-color: #000000;
-    font-family: "Poppins", sans-serif !important;
+  padding: 20px 0;
+  background-color: #000000;
+  font-family: "Poppins", sans-serif !important;
 }
 
 .header-link {
-    text-decoration: none;
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
+  text-decoration: none;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
 }
 
 .header-link:hover {
-    color: #2eafbb !important;
-    text-decoration: none;
+  color: #2eafbb !important;
+  text-decoration: none;
 }
 
 .header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .header ul li {
-    display: inline-block;
-    color: #2eafbb;
-    margin-right: 20px;
+  display: inline-block;
+  color: #2eafbb;
+  margin-right: 20px;
 }
 
 .header a,
 .header h1 {
-    color: #ffffff !important;
+  color: #ffffff !important;
 }
 
 .header h1 {
-    font-size: 34px;
-    font-weight: 700;
+  font-size: 34px;
+  font-weight: 700;
 }
 
 .movies-content {
-    padding: 30px 0;
+  padding: 30px 0;
 }
 
 .description {
-    font-size: 14px;
-    color: #ccc;
-    line-height: 1.7em;
+  font-size: 14px;
+  color: #ccc;
+  line-height: 1.7em;
 }
 
 .card-movie {
-    width: 250px;
-    height: 500px;
-    padding-bottom: 20px;
+  width: 250px;
+  height: 500px;
+  padding-bottom: 20px;
 }
 
 .card-movie .poster-img {
-    /* Add shadows to create the "card" effect */
-    -webkit-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.26);
-    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.26);
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-    width: 100%;
-    margin: 0 !important;
+  /* Add shadows to create the "card" effect */
+  -webkit-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.26);
+          box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.26);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 100%;
+  margin: 0 !important;
 }
 
 .card-movie .poster-img:hover {
-    cursor: pointer;
-    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.411);
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.411);
+  cursor: pointer;
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.411);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.411);
 }
 
 .card-movie .title {
-    margin: 5px 0 10px 0;
-    font-size: 18px;
-    color: #ffffff;
-    font-weight: bold;
+  margin: 5px 0 10px 0;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .card-movie .genres {
-    margin-top: 5px;
-    font-size: 15px;
-    color: #c2c2c2;
+  margin-top: 5px;
+  font-size: 15px;
+  color: #c2c2c2;
 }
 
 .wrapper {
-    background-color: #00000098;
-    width: 100%;
-    height: 100%;
+  background-color: #00000098;
+  width: 100%;
+  height: 100%;
 }
 
 .movie-details {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .movie-details-title {
-    margin: 0;
-    font-size: 46px;
-    color: #ffffff;
+  margin: 0;
+  font-size: 46px;
+  color: #ffffff;
 }
 
 .movie-details .wrapper {
-    background: black;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.922)), to(rgba(0, 0, 0, 0.575)));
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.922) 0%, rgba(0, 0, 0, 0.575) 100%);
-    padding: 80px 0;
-    text-align: center;
+  background: black;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.922)), to(rgba(0, 0, 0, 0.575)));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.922) 0%, rgba(0, 0, 0, 0.575) 100%);
+  padding: 80px 0;
+  text-align: center;
 }
 
 .movie-details-poster {
-    width: 100%;
-    margin-top: -50px;
-    -o-border-image: linear-gradient(to right, red, yellow);
-    border-image: -webkit-gradient(linear, left top, right top, from(red), to(yellow));
-    border-image: linear-gradient(to right, red, yellow);
-    border-image-slice: 1;
-    border-radius: 20px;
+  width: 100%;
+  margin-top: -50px;
+  -o-border-image: linear-gradient(to right, red, yellow);
+     border-image: -webkit-gradient(linear, left top, right top, from(red), to(yellow));
+     border-image: linear-gradient(to right, red, yellow);
+  border-image-slice: 1;
+  border-radius: 20px;
 }
 
 .movie-details-top-stats {
-    margin: 20px 0;
-    height: 60px;
-    width: 100%;
-    line-height: 60px;
-    display: inline-block;
+  margin: 20px 0;
+  height: 60px;
+  width: 100%;
+  line-height: 60px;
+  display: inline-block;
 }
 
 .movie-details-top-stats:after {
-    content: '';
-    height: 1px;
-    background-color: rgba(204, 204, 204, 0.712);
-    display: block;
-    width: 100%;
+  content: '';
+  height: 1px;
+  background-color: rgba(204, 204, 204, 0.712);
+  display: block;
+  width: 100%;
 }
 
 .movie-details-top-stats .average-rating {
-    font-size: 22px;
-    font-weight: 700;
-    height: 35px;
-    width: 35px;
-    line-height: 35px;
-    text-align: center;
-    border-radius: 50%;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-    color: #ffffff;
-    padding: 12px;
-    border: 1px solid #ccc;
-    background: #ff8401;
-    background: linear-gradient(9deg, #ff8401 0%, #ffa600 100%);
-    -webkit-box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
+  font-size: 22px;
+  font-weight: 700;
+  height: 35px;
+  width: 35px;
+  line-height: 35px;
+  text-align: center;
+  border-radius: 50%;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+  padding: 12px;
+  border: 1px solid #ccc;
+  background: #ff8401;
+  background: linear-gradient(9deg, #ff8401 0%, #ffa600 100%);
+  -webkit-box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
 }
 
 .movie-details-top-stats .tag {
-    padding: 0 30px;
-    border-radius: 10px;
-    font-size: 18px;
-    text-align: center;
-    color: #ffffff;
-    background: #364669;
-    -webkit-box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
+  padding: 0 30px;
+  border-radius: 10px;
+  font-size: 18px;
+  text-align: center;
+  color: #ffffff;
+  background: #364669;
+  -webkit-box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 8px 11px 0 rgba(0, 0, 0, 0.1);
 }
 
 .movie-details-bottom-stats {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .movie-details #movie-backdrop-img {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .movie-details .subtitle {
-    font-size: 16px;
-    letter-spacing: 1px;
-    font-weight: 700;
-    margin-bottom: 5px;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .movie-details p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 footer {
-    padding: 40px 0;
-    font-family: "Poppins", sans-serif !important;
-    color: #ffffff;
-    position: relative;
-    background: url("../images/bg-wave-bottom.svg");
-    background-color: #1e1e30;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  padding: 40px 0;
+  font-family: "Poppins", sans-serif !important;
+  color: #ffffff;
+  position: relative;
+  background: url("../images/bg-wave-bottom.svg");
+  background-color: #1e1e30;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 footer h2 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .middle > * {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .login {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .login .illustration {
-    vertical-align: middle;
-    display: table-cell;
-    text-align: center;
-    padding: 4% 0;
-    background-repeat: no-repeat;
-    background-size: 200%;
+  vertical-align: middle;
+  display: table-cell;
+  text-align: center;
+  padding: 4% 0;
+  background-repeat: no-repeat;
+  background-size: 200%;
 }
 
 .login-form {
-    background: #1e1e30;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #1e1e30), color-stop(150%, #2e4981));
-    background: linear-gradient(180deg, #1e1e30 70%, #2e4981 150%);
-    color: #ffffff;
-    padding: 60px 80px !important;
+  background: #1e1e30;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #1e1e30), color-stop(150%, #2e4981));
+  background: linear-gradient(180deg, #1e1e30 70%, #2e4981 150%);
+  color: #ffffff;
+  padding: 60px 80px !important;
 }
 
 .login-form input {
-    padding: 10px;
-    font-size: 18px;
-    border: 1px solid #ffffff;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    /* Safari/Chrome, other WebKit */
-    /* Firefox, other Gecko */
-    box-sizing: border-box;
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #ffffff;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome, other WebKit */
+  /* Firefox, other Gecko */
+  box-sizing: border-box;
 }
 
 .login-form h2 {
-    font-size: 46px;
-    font-weight: 600;
-    margin-bottom: 40px;
+  font-size: 46px;
+  font-weight: 600;
+  margin-bottom: 40px;
 }
 
 .login-form h2:after {
-    content: '';
-    display: block;
-    margin-top: 15px;
-    width: 10%;
-    height: 6px;
-    background-color: #0ceafa;
+  content: '';
+  display: block;
+  margin-top: 15px;
+  width: 10%;
+  height: 6px;
+  background-color: #0ceafa;
 }
 
 .login-form label {
-    width: 100%;
-    font-size: 24px;
-    margin: 0;
+  width: 100%;
+  font-size: 24px;
+  margin: 0;
 }
 
 .login-form label .eye-icon-pw {
-    float: right !important;
+  float: right !important;
 }
 
 .login-form input {
-    width: 100%;
-    margin-bottom: 30px;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
 .login-form button {
-    background: black;
-    background: linear-gradient(9deg, black 0%, rgba(0, 0, 0, 0.5) 100%);
-    color: #0ceafa;
-    width: 100%;
-    border: 3px solid #000000;
-    padding: 15px;
-    font-size: 18px;
-    font-weight: 600;
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
-    text-transform: uppercase;
-    margin: 20px 0 40px 0;
+  background: black;
+  background: linear-gradient(9deg, black 0%, rgba(0, 0, 0, 0.5) 100%);
+  color: #0ceafa;
+  width: 100%;
+  border: 3px solid #000000;
+  padding: 15px;
+  font-size: 18px;
+  font-weight: 600;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  text-transform: uppercase;
+  margin: 20px 0 40px 0;
 }
 
 .login-form button:hover {
-    cursor: pointer;
-    border: 3px solid #0ceafa;
-    background-color: lighten;
+  cursor: pointer;
+  border: 3px solid #0ceafa;
+  background-color: lighten;
 }
 
 .login-form .link {
-    color: #0ceafa;
-    text-decoration: none;
+  color: #0ceafa;
+  text-decoration: none;
 }
 
 .btn-add {
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: 600;
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
-    background-color: green;
-    color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  background-color: green;
+  color: #ffffff;
 }
 
 .btn-add:hover {
-    cursor: pointer;
-    background-color: #00b300;
+  cursor: pointer;
+  background-color: #00b300;
 }
 
 .table-my-list {
-    border-collapse: collapse;
-    width: 100%;
-    color: #ffffff;
+  border-collapse: collapse;
+  width: 100%;
+  color: #ffffff;
 }
 
 .table-my-list td,
 .table-my-list th {
-    border-bottom: 1px solid #293042;
-    text-align: left;
-    padding: 8px;
+  border-bottom: 1px solid #293042;
+  text-align: left;
+  padding: 8px;
 }
 
 .table-my-list th {
-    background-color: #2e3447;
-    color: #2eafbb;
+  background-color: #2e3447;
+  color: #2eafbb;
 }
 
 .table-my-list tr:nth-child(even) {
-    background-color: #2e3447;
+  background-color: #2e3447;
 }
 
 .table-my-list tr {
-    background-color: #353d4f;
+  background-color: #353d4f;
 }
 
 .table-legend-about {
-    width: 40%;
+  width: 40%;
 }
 
 .carousel-title {
-    font-size: 50px;
-    font-weight: 700;
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .carousel-description {
-    font-size: 20px;
-    line-height: 1.7em;
+  font-size: 20px;
+  line-height: 1.7em;
 }
 
 .MuiBox-root {
-    padding: 0 !important;
+  padding: 0 !important;
 }
 
 .landing-page {
-    height: 100vh;
-    max-height: 100vh;
-    background: url("https://content.web-repository.com/s/48556210809167881/uploads/Backgrounds/gradient_warm_gif_background-0967584.gif");
-    background-size: cover;
-    color: #ffffff;
+  height: 100vh;
+  max-height: 100vh;
+  background: url("https://content.web-repository.com/s/48556210809167881/uploads/Backgrounds/gradient_warm_gif_background-0967584.gif");
+  background-size: cover;
+  color: #ffffff;
 }
 
 .landing-page .wrapper {
-    background: rgba(159, 45, 131, 0.418);
-    background: linear-gradient(100deg, rgba(159, 45, 130, 0.5) 0%, rgba(41, 34, 102, 0.75) 100%);
+  background: rgba(159, 45, 131, 0.418);
+  background: linear-gradient(100deg, rgba(159, 45, 130, 0.5) 0%, rgba(41, 34, 102, 0.75) 100%);
 }
 
 @media (max-width: 767px) {
-    .landing-page .wrapper {
-        padding: 0 0 40px 0;
-    }
+  .landing-page .wrapper {
+    padding: 0 0 40px 0;
+  }
 }
 
 .landing-page .wrapper .container {
-    padding-top: 10%;
+  padding-top: 10%;
 }
 
 .landing-page .wrapper h1 {
-    font-size: 50px;
-    font-weight: 700;
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .landing-page .wrapper p {
-    font-size: 20px;
-    line-height: 1.7em;
+  font-size: 20px;
+  line-height: 1.7em;
 }
 
 @media (max-width: 767px) {
-    .landing-page .wrapper .img-col {
-        display: none;
-    }
+  .landing-page .wrapper .img-col {
+    display: none;
+  }
 }
 
 .landing-page .wrapper .img-col img {
-    margin-top: -150px;
-    margin-left: -100px;
-    margin-right: -30px;
-    -webkit-filter: drop-shadow(5px 5px 15px #d486ba9a);
-    filter: drop-shadow(5px 5px 15px #d486ba9a);
+  margin-top: -150px;
+  margin-left: -100px;
+  margin-right: -30px;
+  -webkit-filter: drop-shadow(5px 5px 15px #d486ba9a);
+  filter: drop-shadow(5px 5px 15px #d486ba9a);
 }
 
 .landing-page .wrapper .cta {
-    background-color: #d486ba;
-    border-radius: 5px;
-    text-transform: uppercase;
-    color: #ffffff;
-    font-weight: 700;
-    padding: 12px 50px;
-    display: inline-block;
-    margin-top: 10px;
-    font-size: 18px;
-    letter-spacing: 1px;
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
-    margin-right: 20px;
-    text-decoration: none;
+  background-color: #d486ba;
+  border-radius: 5px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+  padding: 12px 50px;
+  display: inline-block;
+  margin-top: 10px;
+  font-size: 18px;
+  letter-spacing: 1px;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  margin-right: 20px;
+  text-decoration: none;
 }
 
 .landing-page .wrapper .cta:hover {
-    border-radius: 40px;
-    background-color: #c760a5;
+  border-radius: 40px;
+  background-color: #c760a5;
 }
 
 .landing-page .wrapper .cta-outline {
-    background-color: transparent;
-    border: 2px solid #d486ba;
+  background-color: transparent;
+  border: 2px solid #d486ba;
 }
 
 .landing-page .wrapper .cta-outline:hover {
-    background-color: #d486ba;
+  background-color: #d486ba;
 }
 
 .delete-trash-icon {
-    color: #f55448;
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
+  color: #f55448;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
 }
 
 .delete-trash-icon:hover {
-    cursor: pointer;
-    color: #f88178;
+  cursor: pointer;
+  color: #f88178;
 }
 
+.select {
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 200px;
+}
 /*# sourceMappingURL=App.css.map */
