--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -515,4 +515,29 @@ footer h2 {
   border-radius: 5px;
   width: 200px;
 }
+
+.alert-box {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.success {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+.failure {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
+
+.warning {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+}
 /*# sourceMappingURL=App.css.map */
