--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -527,13 +527,17 @@ footer h2 {
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
+  -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.13);
+          box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.13);
+  font-size: 14px;
 }
 
 .success {
   position: fixed;
   top: 0;
   color: #3c763d;
-  background-color: #dff0d8;
+  font-weight: 600;
+  background-color: #d0f0c4;
   border-color: #d6e9c6;
 }
 
