--- a/frontend/src/css/App.scss
+++ b/frontend/src/css/App.scss
@@ -602,3 +602,16 @@ footer {
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+.search-btn {
+  color: black;
+  margin-left: -45px;
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .2));
+  transition: .3s ease;
+
+  &:hover {
+    color: lighten(black, 10%);
+    cursor: pointer;
+    filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, .3));
+  }
+}
